--- a/Main.tex
+++ b/Main.tex
@@ -256,8 +256,8 @@ boxed title style = {colback=green!35!black}
 \subfile{L14/L14}
 \subfile{L15/L15}
 \subfile{L16/L16}
-%\subfile{L17/L17}
-%\subfile{L18/L18}
-%\subfile{L19/L19}
-%\subfile{L20/L20}
+\subfile{L17/L17}
+\subfile{L18/L18}
+\subfile{L19/L19}
+\subfile{L20/L20}
 \end{document}
