--- a/Title/Titlepage.tex
+++ b/Title/Titlepage.tex
@@ -1,6 +1,6 @@
 \documentclass[../Main.tex]{subfiles}
 \begin{document}
-\title{\textbf {Math 28B: Introduction to Rings and Fields}\\[0.2em]\large Based on Lectures by Mckee Krumpak\vspace{-2ex} }
+\title{\textbf {Math 28B: Introduction to Rings and Fields} }
 \author{Typed by Hussein Hijazi}
 \date{Spring 2021}
 \titlepic{\includegraphics[width=0.8\textwidth]{rings.png}}
@@ -10,6 +10,6 @@
 
 I try my best to keep the multiplication of ring elements (with the $\rdot $ operation) explicit, but sometimes I have left it out unintentionally as the notes were typed (this happens more often in earlier lectures). The spacing of nested proofs and claims can be a bit awkward; occasionally, I will go back through the notes to make it more readable.\\
 
-The table of contents is set up to easily navigate between presented ideas, although I haven't been able to think of titles for everything. \textbf{Anytime} you see phrases or words in {\color{blue}blue like this} (other than literally now), it is a link to take you to some part of the notes being referenced, or an external URL. If it is a reference within the notes, you will be referred to it and will begin at the top of your screen. If there are any mathematical typos/errors or suggestions on design changes and theorem names, please do not hesitate to let me know at \href{mailto:husseinhijazi@brandeis.edu}{husseinhijazi@brandeis.edu}
+The table of contents is set up to easily navigate between presented ideas, although I haven't been able to think of titles for everything. \textbf{Anytime} you see phrases or words in {\color{blue}blue like this} (other than literally now), it is a link to take you to some part of the notes being referenced, or an external URL. If it is a reference within the notes, you will be referred to it and will begin at the top of your screen. If there are any mathematical typos/errors or suggestions on design changes and theorem names, please do not hesitate to let me know.
 \end{minipage}
 \end{document}
